[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/_global/ScreenShake.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/1bitpack_kenney_1.1/Tilesheet/monochrome_transparent_packed.png" type="Texture" id=2]
[ext_resource path="res://scenes/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/_global/MusicPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Entrance/Entrance.gd" type="Script" id=5]
[ext_resource path="res://scenes/_global/Hud.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/_global/Mob.tscn" type="PackedScene" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=2]
0/name = "monochrome_transparent_packed.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 160, 272, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "monochrome_transparent_packed.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 256, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "monochrome_transparent_packed.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "monochrome_transparent_packed.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 96, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 80, 112, 0, 0, 0, 0, 112, 112, 0, 0, 0, 0, 112, 80, 0, 0, 0, 0, 912, 80, 0, 0, 0, 0, 912, 112, 0, 0, 0, 0, 944, 112, 0, 0, 0, 0, 944, 496, 0, 0, 0, 0, 912, 496, 0, 0, 0, 0, 912, 528, 0, 0, 0, 0, 112, 528, 0, 0, 0, 0, 112, 496, 0, 0, 0, 0, 80, 496, 0, 0, 0, 0, 80, 112 )
}

[node name="Entrance" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}
Mob = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 608.0
color = Color( 0.0431373, 0.0470588, 0.145098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartingPosition" type="Position2D" parent="."]
position = Vector2( 512, 320 )

[node name="Floor" type="TileMap" parent="."]
modulate = Color( 0.121569, 0.423529, 0.164706, 1 )
scale = Vector2( 2, 2 )
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 1024
collision_mask = 1024
format = 1
tile_data = PoolIntArray( 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131092, 3, 0, 131093, 3, 0, 131094, 3, 0, 131095, 3, 0, 131096, 3, 0, 131097, 3, 0, 131098, 3, 0, 131099, 3, 0, 131100, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196618, 3, 0, 196619, 3, 0, 196628, 3, 0, 196631, 3, 0, 196632, 3, 0, 196634, 3, 0, 196635, 3, 0, 196636, 3, 0, 196637, 3, 0, 262146, 3, 0, 262171, 3, 0, 262172, 3, 0, 262173, 3, 0, 327682, 3, 0, 327684, 3, 0, 327685, 3, 0, 327688, 3, 0, 327690, 3, 0, 327691, 3, 0, 327702, 3, 0, 327708, 3, 0, 327709, 3, 0, 393218, 3, 0, 393223, 3, 0, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393237, 3, 0, 393238, 3, 0, 393239, 3, 0, 393241, 3, 0, 393244, 3, 0, 393245, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458774, 3, 0, 458775, 3, 0, 458778, 3, 0, 458781, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524298, 3, 0, 524309, 3, 0, 524310, 3, 0, 524311, 3, 0, 524312, 3, 0, 524316, 3, 0, 589826, 3, 0, 589827, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 3, 0, 589847, 3, 0, 655362, 3, 0, 655368, 3, 0, 655369, 3, 0, 655371, 3, 0, 655381, 3, 0, 655386, 3, 0, 720898, 3, 0, 720902, 3, 0, 720904, 3, 0, 720905, 3, 0, 720918, 3, 0, 720919, 3, 0, 720922, 3, 0, 720925, 3, 0, 786434, 3, 0, 786437, 3, 0, 786438, 3, 0, 786441, 3, 0, 786442, 3, 0, 786457, 3, 0, 786458, 3, 0, 786461, 3, 0, 851970, 3, 0, 851971, 3, 0, 851974, 3, 0, 851977, 3, 0, 851978, 3, 0, 851990, 3, 0, 851991, 3, 0, 851992, 3, 0, 851993, 3, 0, 851994, 3, 0, 851995, 3, 0, 851997, 3, 0, 917506, 3, 0, 917507, 3, 0, 917515, 3, 0, 917525, 3, 0, 917526, 3, 0, 917528, 3, 0, 917529, 3, 0, 917533, 3, 0, 983042, 3, 0, 983043, 3, 0, 983044, 3, 0, 983063, 3, 0, 983064, 3, 0, 983069, 3, 0, 1048579, 3, 0, 1048580, 3, 0, 1048581, 3, 0, 1048582, 3, 0, 1048583, 3, 0, 1048584, 3, 0, 1048585, 3, 0, 1048586, 3, 0, 1048587, 3, 0, 1048597, 3, 0, 1048598, 3, 0, 1048599, 3, 0, 1048600, 3, 0, 1048601, 3, 0, 1048602, 3, 0, 1048604, 3, 0 )

[node name="Walls" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 2049
collision_mask = 2049
format = 1
tile_data = PoolIntArray( 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 131073, 0, 0, 131074, 0, 0, 131101, 0, 0, 131102, 0, 0, 196609, 0, 0, 196638, 0, 0, 262145, 0, 0, 262174, 0, 0, 327681, 0, 0, 327710, 0, 0, 393217, 0, 0, 393246, 0, 0, 458753, 0, 0, 458782, 0, 0, 524289, 0, 0, 524318, 0, 0, 589825, 0, 0, 589854, 0, 0, 655361, 0, 0, 655390, 0, 0, 720897, 0, 0, 720926, 0, 0, 786433, 0, 0, 786462, 0, 0, 851969, 0, 0, 851998, 0, 0, 917505, 0, 0, 917534, 0, 0, 983041, 0, 0, 983070, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="MobSpawn" type="PathFollow2D" parent="MobPath"]
position = Vector2( 80, 112 )
rotation = 1.94468e-06

[node name="MusicPlayer" parent="." instance=ExtResource( 4 )]
position = Vector2( 387, 112 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 512, 320 )
speed = 200

[node name="Hud" parent="." instance=ExtResource( 6 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 511.359, 303.248 )
current = true

[node name="ScreenShake" parent="Camera2D" instance=ExtResource( 1 )]
[connection signal="miss" from="MusicPlayer" to="." method="_on_MusicPlayer_miss"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="hit" from="Player" to="Hud" method="_on_Player_hit"]
[connection signal="dead" from="Hud" to="Player" method="death"]
